--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="robots"
+      content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
 
     <title>Andra Wicaksono - Software Engineer</title>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://andrawicaksono.com/" />
 
     <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="Hey there! I'm Andra Wicaksono, a software engineer working in the banking world. I build fast, reliable, and scalable systems with React, Kotlin, Go, and cloud technologies. Passionate about clean code, DevOps, and simplifying complex systems."
+      content="Andra Wicaksono - Software Engineer specializing in React, Kotlin, Go, cloud architecture. Building fast, scalable systems for banking and fintech. Explore projects and experience."
     />
     <meta
       name="keywords"
-      content="Andra Wicaksono, Software Engineer, Full Stack Developer, Cloud Architect, React Developer, Kotlin Developer, Go Developer, Java, Spring Boot, Microservices, Docker, Kubernetes, AWS, Google Cloud, CI/CD, TailwindCSS, TypeScript"
+      content="Software Engineer, Cloud Architect, React Developer, Kotlin Developer, Go Developer, Banking Systems, Microservices, Docker, Kubernetes, AWS, Google Cloud, DevOps, TypeScript, Spring Boot"
     />
     <meta name="author" content="Andra Wicaksono" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="copyright" content="© 2025 Andra Wicaksono" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -24,11 +34,17 @@
     <meta property="og:title" content="Andra Wicaksono - Software Engineer" />
     <meta
       property="og:description"
-      content="Hey there! I'm Andra Wicaksono, a software engineer working in the banking world. I build fast, reliable, and scalable systems with React, Kotlin, Go, and cloud technologies. Passionate about clean code, DevOps, and simplifying complex systems."
+      content="Software Engineer specializing in React, Kotlin, Go, and cloud architecture. Building fast, scalable systems for banking and fintech. Explore my portfolio of projects."
     />
     <meta
       property="og:image"
       content="https://andrawicaksono.com/social-preview.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:site_name"
+      content="Andra Wicaksono - Software Engineer"
     />
 
     <!-- Twitter -->
@@ -40,20 +56,30 @@
     />
     <meta
       property="twitter:description"
-      content="Hey there! I'm Andra Wicaksono, a software engineer working in the banking world. I build fast, reliable, and scalable systems with React, Kotlin, Go, and cloud technologies. Passionate about clean code, DevOps, and simplifying complex systems."
+      content="Software Engineer. React, Kotlin, Go, Cloud Architecture. Banking & Fintech specialist."
     />
     <meta
       property="twitter:image"
       content="https://andrawicaksono.com/social-preview.png"
     />
+    <meta name="twitter:creator" content="@andraswicaksono" />
 
     <!-- Manifest / PWA -->
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#4f46e5" />
 
-    <!-- Fonts -->
+    <!-- Performance: Preconnect, DNS Prefetch, and Preload -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+
+    <!-- Fonts -->
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -68,6 +94,7 @@
         "url": "https://andrawicaksono.com",
         "image": "https://andrawicaksono.com/social-preview.png",
         "jobTitle": "Software Engineer",
+        "description": "Software Engineer specializing in React, Kotlin, Go, and cloud architecture. Building fast, scalable systems for banking and fintech.",
         "worksFor": {
           "@type": "Organization",
           "name": "Banking Industry"
@@ -77,7 +104,73 @@
           "https://linkedin.com/in/andrawicaksono",
           "https://twitter.com/andrawicaksono"
         ],
-        "description": "Software engineer passionate about building reliable, scalable, and maintainable systems using React, Kotlin, Go, Docker, Kubernetes, and cloud technologies like AWS and Google Cloud."
+        "knowsAbout": [
+          "React",
+          "TypeScript",
+          "Kotlin",
+          "Go",
+          "Java",
+          "Spring Boot",
+          "Microservices",
+          "Docker",
+          "Kubernetes",
+          "AWS",
+          "Google Cloud",
+          "CI/CD",
+          "DevOps",
+          "Cloud Architecture"
+        ]
+      }
+    </script>
+
+    <!-- Portfolio/BreadcrumbList Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://andrawicaksono.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Portfolio",
+            "item": "https://andrawicaksono.com/#portfolio"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Experience",
+            "item": "https://andrawicaksono.com/#experience"
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "name": "Contact",
+            "item": "https://andrawicaksono.com/#contact"
+          }
+        ]
+      }
+    </script>
+
+    <!-- Organization Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Andra Wicaksono - Software Engineer",
+        "url": "https://andrawicaksono.com",
+        "logo": "https://andrawicaksono.com/favicon.png",
+        "description": "Software Engineer specializing in React, Kotlin, Go, and cloud architecture",
+        "sameAs": [
+          "https://github.com/andrawicaksono",
+          "https://linkedin.com/in/andrawicaksono",
+          "https://twitter.com/andrawicaksono"
+        ]
       }
     </script>
   </head>
